WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303848
[Site Isolation] Fix assertion failure when cross-site frame opens window with blob URL
https://bugs.webkit.org/show_bug.cgi?id=303848
Summary
[Site Isolation] Fix assertion failure when cross-site frame opens window wit...
Sihui Liu
Reported
2025-12-09 09:24:54 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2025-12-09 09:25:09 PST
rdar://165842879
Sihui Liu
Comment 2
2025-12-09 09:38:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/55115
EWS
Comment 3
2025-12-09 16:21:32 PST
Committed
304192@main
(b04a14ade3eb): <
https://commits.webkit.org/304192@main
> Reviewed commits have been landed. Closing PR #55115 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug